<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BLACK"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/BLACK"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/playBtn"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/_playBtn"
            android:src="@drawable/play" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/BLACK"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/pauseBtn"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="@string/_playBtn"
                android:src="@drawable/pause" />

            <ImageView
                android:id="@+id/stopBtn"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="@string/_stopBtn"
                android:src="@drawable/stop" />

            <ImageView
                android:id="@+id/volumeupBtn"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="@string/_volumeupBtn"
                android:src="@drawable/volumeup" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@color/BLACK"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/previoustrackBtn"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="@string/_previoustrackBtn"
                android:src="@drawable/previoustrack" />
            
             <ImageView
                android:id="@+id/nexttrackBtn"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="@string/_nexttrackBtn"
                android:src="@drawable/nexttrack" />
             
               <ImageView
                android:id="@+id/volumedownBtn"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="@string/_volumedownBtn"
                android:src="@drawable/volumedown" />
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>